<?xml version="1.0"?>
<package format="2">
  <name>ament_copyright</name>
  <version>0.0.0</version>
  <description>The ability to check every source file contains copyright reference in the ament buildsystem.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>python3</buildtool_depend>

  <buildtool_export_depend>python3</buildtool_export_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
