<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cppcheck</name>
  <version>0.9.6</version>
  <description>
    The ability to perform static code analysis on C/C++ code using Cppcheck
    and generate xUnit test result files.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>cppcheck</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
