<?xml version="1.0"?>
<package format="2">
  <name>ament_cpplint</name>
  <version>0.0.0</version>
  <description>The ability to check code against the Google style conventions using cpplint in the ament buildsystem.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake_test</buildtool_depend>

  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>

  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep8</test_depend>
  <test_depend>ament_cmake_pyflakes</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
