<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_flake8</name>
  <version>0.9.6</version>
  <description>
    The ability to check code for style and syntax conventions with flake8.
  </description>
  <maintainer email="steven@osrfoundation.org">Steven! Ragnarok</maintainer>
  <license>Apache License 2.0</license>
  <author email="dhood@osrfoundation.org">D. Hood</author>

  <exec_depend>ament_lint</exec_depend>
  <exec_depend>python3-flake8</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
