<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ament_mypy</name>
  <version>0.9.6</version>
  <description>Support for mypy static type checking in ament.</description>
  <maintainer email="ted.kern@canonical.com">Ted Kern</maintainer>
  <license>Apache License 2.0</license>
  <author email="ted.kern@canonical.com">Ted Kern</author>

  <exec_depend>python3-mypy</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
