<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_pep257</name>
  <version>0.0.0</version>
  <description>
    The ability to check code against the style conventions in PEP 8 and
    generate xUnit test result files.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>
  <license>MIT</license>

  <exec_depend>pydocstyle</exec_depend>

  <test_depend>ament_pep8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
