<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_pep257</name>
  <version>0.10.6</version>
  <description>
    The ability to check code against the style conventions in PEP 8 and
    generate xUnit test result files.
  </description>
  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
  <license>Apache License 2.0</license>
  <license>MIT</license>

  <author>Dirk Thomas</author>
  <author>Claire Wang</author>

  <exec_depend>ament_lint</exec_depend>
  <exec_depend>pydocstyle</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
