<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_pycodestyle</name>
  <version>0.10.6</version>
  <description>
    The ability to check code against the style conventions in PEP 8 and
    generate xUnit test result files.
  </description>
  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
  <license>Apache License 2.0</license>

  <author>Dirk Thomas</author>
  <author>Claire Wang</author>

  <exec_depend>python3-pycodestyle</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
