<?xml version="1.0"?>
<package format="2">
  <name>ament_pyflakes</name>
  <version>0.0.0</version>
  <description>The ability to check code using pyflakes in the ament buildsystem.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake_test</buildtool_depend>

  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>
  <buildtool_export_depend>pyflakes</buildtool_export_depend>

  <test_depend>ament_pep8</test_depend>
  <test_depend>pyflakes</test_depend>
</package>
