<?xml version="1.0"?>
<package format="2">
  <name>ament_uncrustify</name>
  <version>0.0.0</version>
  <description>
    The ability to check code against style conventions using uncrustify
    and generate xUnit test result files.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>uncrustify</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
