<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_uncrustify</name>
  <version>0.9.6</version>
  <description>
    The ability to check code against style conventions using uncrustify
    and generate xUnit test result files.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>uncrustify_vendor</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
