<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_uno</name>
  <version>0.0.1</version>
  <description>
    The ability to perform static code analysis on C code using uno
    and generate xUnit test result files.
  </description>
  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>
  <license>Apache License 2.0</license>

  <author>Dirk Thomas</author>
  <author>Claire Wang</author>

<!-- No official Uno package
  <exec_depend>uno</exec_depend>
-->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
